# cyanide

./: pyproject.toml  requirements.txt
cyanide/: app.py  suite.py  templates.py
